--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /usr/src/app
 
-COPY build/libs/demo-0.0.1.war .
+COPY /build/libs/demo-0.0.1.war .
 
 CMD ["java", "-jar", "demo-0.0.1.war"]
 
