fix docker file in backend war in docker image

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,8 +1,16 @@
+# Stage 1: Build the WAR
+FROM eclipse-temurin:21-jdk-jammy AS build
+
+WORKDIR /usr/src/app
+COPY . .
+RUN ./gradlew clean build
+
+# Stage 2: Runtime
 FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /usr/src/app
 # Copy the WAR from the build stage
-COPY build/libs/demo-0.0.1.war app.war
+COPY --from=build /usr/src/app/build/libs/*.war app.war
 
 CMD ["java", "-jar", "app.war"]
 
