fix frontend docker file

--- a/cicd-testing/Dockerfile
+++ b/cicd-testing/Dockerfile
@@ -1,11 +1,22 @@
+# Stage 1: Build the React app
+FROM node:20-alpine AS build
+
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
+# Stage 2: Serve the app
 FROM node:20-alpine
 
 WORKDIR /usr/src/app
-COPY dist ./dist
-
 RUN npm install -g serve
 
-WORKDIR /usr/src/app/dist
-CMD ["serve", "-s", ".", "-l", "80"]
+# Copy build output
+COPY --from=build /usr/src/app/build ./build
 
 EXPOSE 80
+CMD ["serve", "-s", "build", "-l", "80"]
