--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,12 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          port: 22
           source: "docker-compose.yml"
           target: "~/myapp/"
+          timeout: 60s
+          command_timeout: 10m
+          debug: true
 
       # 6. SSH to EC2 and deploy
       - name: Deploy to EC2
@@ -52,6 +56,10 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          port: 22
+          timeout: 60s
+          command_timeout: 10m
+          debug: true
           script: |
             cd ~/myapp
             docker-compose pull
