check ec2 connect or not

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,32 +35,32 @@ jobs:
           docker build -t $IMAGE_NAME ./cicd-testing
           docker push $IMAGE_NAME
 
-      # 5. Copy docker-compose.yml to EC2
-      - name: Copy docker-compose.yml to EC2
-        uses: appleboy/scp-action@v0.1.6
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          port: 22
-          source: "docker-compose.yml"
-          target: "~/myapp/"
-          timeout: 60s
-          command_timeout: 10m
-          debug: true
+      # 5. Test connectivity to EC2
+      - name: Test EC2 connectivity
+        run: |
+          echo "Testing connectivity to EC2 instance..."
+          timeout 10 bash -c "</dev/tcp/${{ secrets.EC2_HOST }}/22" && echo "Port 22 is open" || echo "Port 22 is closed or unreachable"
 
-      # 6. SSH to EC2 and deploy
+      # 6. Setup SSH key
+      - name: Setup SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      # 7. Copy docker-compose.yml to EC2 (Alternative method)
+      - name: Copy docker-compose.yml to EC2
+        run: |
+          scp -i ~/.ssh/id_rsa -o ConnectTimeout=30 -o ServerAliveInterval=60 -o ServerAliveCountMax=3 \
+            docker-compose.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/myapp/
+
+      # 8. SSH to EC2 and deploy
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          port: 22
-          timeout: 60s
-          command_timeout: 10m
-          debug: true
-          script: |
+        run: |
+          ssh -i ~/.ssh/id_rsa -o ConnectTimeout=30 -o ServerAliveInterval=60 -o ServerAliveCountMax=3 \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/myapp
             docker-compose pull
             docker-compose up -d
+          EOF
