--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,44 @@ jobs:
           source: "docker-compose.yml"
           target: "~/myapp/"
 
-      # 6. SSH to EC2 and deploy
+      # 6. Install Docker and Docker Compose on EC2
+      - name: Install Docker on EC2
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            echo "Checking if Docker is installed..."
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              sudo apt-get update
+              sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+              echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+              sudo apt-get update
+              sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+              sudo usermod -aG docker ubuntu
+              echo "Docker installed successfully"
+            else
+              echo "Docker is already installed"
+            fi
+
+            echo "Checking if Docker Compose is installed..."
+            if ! command -v docker-compose &> /dev/null; then
+              echo "Installing Docker Compose..."
+              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+              echo "Docker Compose installed successfully"
+            else
+              echo "Docker Compose is already installed"
+            fi
+
+            # Verify installations
+            docker --version
+            docker-compose --version
+
+      # 7. Deploy to EC2
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -54,5 +91,20 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             cd ~/myapp
+            echo "Current directory: $(pwd)"
+            echo "Files in directory:"
+            ls -la
+
+            echo "Stopping existing containers..."
+            docker-compose down || echo "No existing containers to stop"
+
+            echo "Pulling latest images..."
             docker-compose pull
+
+            echo "Starting services..."
             docker-compose up -d
+
+            echo "Checking running containers..."
+            docker ps
+
+            echo "Deployment completed!"
